--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,11 +15,12 @@
   min-width: 100vw;
   font-size: calc(10px + 2vmin);
   color: white;
+  background-color: #282c34;
 }
 
 .image {
   height:100vh;
-  max-width: 50vw;
+  width: 50.0001vw;
   filter: brightness(30%); 
 }
 
@@ -33,7 +34,7 @@
 }
 
 .artist-name {
-  font-size: 3vw;
+  font-size: 2.5vw;
   padding: 3px;
 }
 
