--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,14 @@
 .App {
   width: 100vw;
   text-align: center;
+  overflow: hidden;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                        supported by Chrome, Edge, Opera and Firefox */
 }
 
 .main-container {
@@ -21,7 +29,7 @@
 .image {
   height:100vh;
   width: 50.0001vw;
-  filter: brightness(30%); 
+  filter: brightness(40%); 
 }
 
 .centered {
@@ -39,7 +47,7 @@
 }
 
 .has {
-  font-size: 1.5vw;
+  font-size: 1.25vw;
   padding: 3px;
 }
 
@@ -69,7 +77,7 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 1.5vw;
   position: absolute;
-  top: 95%;
+  top: 92.5%;
   right: 1%;
 }
 
@@ -114,4 +122,16 @@
 
 .button-buffer {
   padding-top: 10px;
+}
+
+.source {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.75vw;
+  position: absolute;
+  top: 96.5%;
+  right: 1%;
+}
+
+.spotify {
+  color: #1DB954;
 }
